<resources>
    <string name="app_name">Fitness Activity</string>
    <string name="signIn">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="dontHaveAccount">Don\'t have an account?</string>
    <string name="signUp">Sign Up</string>
    <string name="name">Name</string>
    <string name="phoneNumber">Phone</string>
    <string name="bmi">BMI</string>
    <string name="nearest_gym">Near Gym</string>
    <string name="stepCounter">Step Count</string>
    <string name="step__Counter">Step Counter</string>
    <string name="videos">Videos</string>
    <string name="profile">Profile</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBBi7byyiwDwUXF5dP4s0FVKwBN_VXzlH0</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="logOut">Log Out</string>
    <string name="login">Login</string>
    <string name="forgotPassword">Forgot your password?</string>
    <string name="dailyChallenges">Daily Challenges</string>
    <string name="videoSuggestions">Video Suggestions</string>
    <string name="workoutSuggestions">Workout Suggestions</string>
    <string name="step_Counter">Step\nCounter</string>
    <string name="bmi_calculator">BMI\nCalculator</string>
    <string name="height">Height (cm)</string>
    <string name="weight">Weight (kg)</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="calculateBmi">Calculate your BMI</string>
    <string name="recalculateBmi">Recalculate BMI</string>
    <string name="more">More</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="your_result">Your Result</string>
    <string name="todayStepCount">Today\'s steps\ncount</string>
    <string name="calculate">Calculate</string>
    <string name="recalculate">Recalculate</string>
    <string name="editProfile">Edit Profile</string>
    <string name="saveChanges">Save Changes</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="messenger">Messenger</string>
    <string name="contactUs">Contact Us</string>
    <string name="weightLossExercises">Weight Loss Exercises</string>
    <string name="weightGainExercises">Weight Gain Exercises</string>
    <string name="bodyBuildingExercises">Body Building Exercises</string>
    <string name="bodyBuilding">Body Building</string>
    <string name="weightLoss">Weight Loss</string>
    <string name="weightGain">Weight Gain</string>
    <string name="your_bmi">Your BMI</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="customChallenge">Custom Challenge</string>
    <string name="title">Title</string>
    <string name="empty" />
    <string name="save">Save</string>
    <string name="markAsComplete">Mark as Complete</string>
    <string name="markComplete">Mark Complete</string>
    <string name="keepInProgress">Keep In Progress</string>
    <string name="delete">Delete</string>
    <string name="noCustomChallengeMessage">No custom challenges found!</string>
    <string name="go">Let\'s Go</string>
    <string name="noThanks">No Thanks</string>
    <string name="dialog_title">Workout Recommendations</string>
    <string name="supporting_text">We have some workouts for you, bases on your BMI, wanna check out?</string>
    <string name="legs">Legs</string>
    <string name="chest">Chest</string>
    <string name="shoulders">Shoulders</string>
    <string name="back">Back</string>
    <string name="arms">Arms</string>
    <string name="abs">Abs</string>
    <string name="suggestions">Suggestions</string>
    <string name="reset">Reset</string>
</resources>