<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_bmi"
            android:icon="@drawable/bmi"
            android:title="@string/bmi" />
        <item
            android:id="@+id/nav_nearest_gym"
            android:icon="@drawable/gym"
            android:title="@string/nearest_gym" />
        <item
            android:id="@+id/nav_step_counter"
            android:icon="@drawable/footprint"
            android:title="@string/stepCounter" />
        <item
            android:id="@+id/nav_youtube"
            android:icon="@drawable/youtube"
            android:title="@string/videos" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/user"
            android:title="@string/profile" />
    </group>
</menu>