<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".activities.SignUpActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200sdp"
            android:layout_marginTop="@dimen/_minus10sdp"
            android:scaleType="centerInside"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/signup"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/signInTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:text="@string/signUp"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_22ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/imageView" />

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:background="@drawable/authentication_edit_text_background"
            android:ems="10"
            android:hint="@string/name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="@dimen/_36sdp"
            android:paddingHorizontal="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signInTextView" />

        <EditText
            android:id="@+id/ageEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_30sdp"
            android:layout_marginTop="@dimen/field_top_margin"
            android:background="@drawable/authentication_edit_text_background"
            android:ems="10"
            android:hint="@string/age"
            android:importantForAutofill="no"
            android:inputType="number"
            android:minHeight="@dimen/_36sdp"
            android:paddingHorizontal="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nameEditText" />

        <EditText
            android:id="@+id/heightEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_30sdp"
            android:layout_marginTop="@dimen/field_top_margin"
            android:background="@drawable/authentication_edit_text_background"
            android:ems="10"
            android:hint="@string/height"
            android:importantForAutofill="no"
            android:inputType="number"
            android:minHeight="@dimen/_36sdp"
            android:paddingHorizontal="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ageEditText" />

        <EditText
            android:id="@+id/weightEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_30sdp"
            android:layout_marginTop="@dimen/field_top_margin"
            android:background="@drawable/authentication_edit_text_background"
            android:ems="10"
            android:hint="@string/weight"
            android:importantForAutofill="no"
            android:inputType="number"
            android:minHeight="@dimen/_36sdp"
            android:paddingHorizontal="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/heightEditText" />

        <EditText
            android:id="@+id/phoneEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_30sdp"
            android:layout_marginTop="@dimen/field_top_margin"
            android:background="@drawable/authentication_edit_text_background"
            android:ems="10"
            android:hint="@string/phoneNumber"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:minHeight="@dimen/_36sdp"
            android:paddingHorizontal="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/weightEditText" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_30sdp"
            android:layout_marginTop="@dimen/field_top_margin"
            android:background="@drawable/authentication_edit_text_background"
            android:ems="10"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:minHeight="@dimen/_36sdp"
            android:paddingHorizontal="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phoneEditText" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_30sdp"
            android:layout_marginTop="@dimen/field_top_margin"
            android:background="@drawable/authentication_edit_text_background"
            android:ems="10"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:minHeight="@dimen/_36sdp"
            android:paddingHorizontal="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailEditText" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="246dp"
            tools:layout_editor_absoluteY="264dp" />

        <android.widget.Button
            android:id="@+id/signUpButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginHorizontal="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:background="@drawable/auth_button_background"
            android:text="@string/signUp"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordEditText" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>