<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AuthenticationActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_minus20sdp"
        android:scaleType="fitXY"
        android:src="@drawable/auth_image"
        tools:ignore="ContentDescription" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blurColor" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_100sdp"
        app:layout_constraintBottom_toTopOf="@id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/logo"
        tools:ignore="ContentDescription" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.48" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline3"
        app:layout_constraintVertical_bias="0.8">

        <android.widget.Button
            android:id="@+id/signUpButton"
            android:layout_width="@dimen/_95sdp"
            android:layout_height="@dimen/_27sdp"
            android:background="@drawable/sign_up_button_background"
            android:text="@string/signUp"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <android.widget.Button
            android:id="@+id/loginButton"
            android:layout_width="@dimen/_95sdp"
            android:layout_height="@dimen/_27sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/login_button_background"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/forgotPassword"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>