<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".activities.EditProfileActivity">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbarThumbVertical="@android:color/transparent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/backgroundColor">

            <TextView
                android:id="@+id/profileTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/editProfile"
                android:textColor="@color/black"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.04" />

            <ImageView
                android:id="@+id/backIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:padding="@dimen/_3sdp"
                android:src="@drawable/ic_back"
                app:layout_constraintBottom_toBottomOf="@id/profileTextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/profileTextView"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:id="@+id/userProfileView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_25sdp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profileTextView"
                app:layout_constraintVertical_bias="0.06">

                <ImageView
                    android:id="@+id/profileImage"
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="@dimen/_70sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:elevation="@dimen/_3sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    app:srcCompat="@drawable/user_profile"
                    tools:ignore="ContentDescription,UnusedAttribute" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/profileImage">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_5sdp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:text="@string/name" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_36sdp"
                        android:layout_marginHorizontal="@dimen/_5sdp"
                        android:elevation="0dp"
                        app:cardCornerRadius="@dimen/_5sdp"
                        app:cardElevation="0dp">

                        <EditText
                            android:id="@+id/nameField"
                            style="@style/profileFieldStyle"
                            android:hint="@string/name"
                            android:importantForAutofill="no"
                            android:inputType="textPersonName"
                            android:maxLength="35"
                            android:paddingHorizontal="@dimen/_10sdp" />

                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:text="@string/email" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_36sdp"
                        android:layout_marginHorizontal="@dimen/_5sdp"
                        android:elevation="0dp"
                        app:cardCornerRadius="@dimen/_5sdp"
                        app:cardElevation="0dp">

                        <EditText
                            android:id="@+id/emailField"
                            style="@style/profileFieldStyle"
                            android:hint="@string/email"
                            android:importantForAutofill="no"
                            android:inputType="textEmailAddress"
                            android:paddingHorizontal="@dimen/_10sdp"
                            android:textColorHint="#D6D7E3" />
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:text="@string/age" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_36sdp"
                        android:layout_marginHorizontal="@dimen/_5sdp"
                        android:elevation="0dp"
                        app:cardCornerRadius="@dimen/_5sdp"
                        app:cardElevation="0dp">

                        <EditText
                            android:id="@+id/ageField"
                            style="@style/profileFieldStyle"
                            android:hint="@string/age"
                            android:importantForAutofill="no"
                            android:inputType="number"
                            android:paddingHorizontal="@dimen/_10sdp"
                            android:textColorHint="#D6D7E3" />
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:text="@string/height" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_36sdp"
                        android:layout_marginHorizontal="@dimen/_5sdp"
                        android:elevation="0dp"
                        app:cardCornerRadius="@dimen/_5sdp"
                        app:cardElevation="0dp">

                        <EditText
                            android:id="@+id/heightField"
                            style="@style/profileFieldStyle"
                            android:hint="@string/height"
                            android:importantForAutofill="no"
                            android:inputType="number"
                            android:paddingHorizontal="@dimen/_10sdp"
                            android:textColorHint="#D6D7E3" />
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:text="@string/weight" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_36sdp"
                        android:layout_marginHorizontal="@dimen/_5sdp"
                        android:elevation="0dp"
                        app:cardCornerRadius="@dimen/_5sdp"
                        app:cardElevation="0dp">

                        <EditText
                            android:id="@+id/weightField"
                            style="@style/profileFieldStyle"
                            android:hint="@string/weight"
                            android:importantForAutofill="no"
                            android:inputType="number"
                            android:paddingHorizontal="@dimen/_10sdp"
                            android:textColorHint="#D6D7E3" />
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:text="@string/phoneNumber" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_36sdp"
                        android:layout_marginHorizontal="@dimen/_5sdp"
                        android:elevation="0dp"
                        app:cardCornerRadius="@dimen/_5sdp"
                        app:cardElevation="0dp">

                        <EditText
                            android:id="@+id/phoneNumberField"
                            style="@style/profileFieldStyle"
                            android:hint="@string/phoneNumber"
                            android:importantForAutofill="no"
                            android:inputType="phone"
                            android:paddingHorizontal="@dimen/_10sdp" />

                    </androidx.cardview.widget.CardView>

                    <android.widget.Button
                        android:id="@+id/saveChangesButton"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_35sdp"
                        android:layout_marginHorizontal="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_25sdp"
                        android:layout_marginBottom="@dimen/_8sdp"
                        android:background="@drawable/auth_button_background"
                        android:text="@string/saveChanges"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/passwordEditText" />

                </androidx.appcompat.widget.LinearLayoutCompat>


            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>